--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --delay 1 ./index.js",
+    "lint": "standard --global $",
+    "test": "mocha ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,21 @@
   "homepage": "https://github.com/stas-lesiuk/nodejs-workshop#readme",
   "dependencies": {
     "babel-core": "^6.25.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "compression": "^1.7.0",
+    "config": "^1.26.1",
+    "connect": "^3.6.3",
+    "errorhandler": "^1.5.0",
+    "morgan": "^1.8.2",
+    "node-notifier": "^5.1.2",
+    "nodemon": "^1.11.0",
+    "response-time": "^2.3.2",
+    "serve-static": "^1.12.4",
+    "standard": "^10.0.3"
+  },
+  "devDependencies": {
+    "chai": "^4.1.1",
+    "mocha": "^3.5.0",
+    "supertest": "^3.0.0"
   }
 }
