--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
+    "body-parser": "^1.17.2",
     "compression": "^1.7.0",
     "config": "^1.26.1",
-    "connect": "^3.6.3",
     "errorhandler": "^1.5.0",
+    "express": "^4.15.4",
     "morgan": "^1.8.2",
     "node-notifier": "^5.1.2",
     "nodemon": "^1.11.0",
     "response-time": "^2.3.2",
-    "serve-static": "^1.12.4",
     "standard": "^10.0.3"
   },
   "devDependencies": {
