--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^1.11.0",
     "response-time": "^2.3.2",
     "sequelize": "^4.4.2",
+    "sqlite3": "^3.1.9",
     "standard": "^10.0.3"
   },
   "devDependencies": {
