--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.2",
+    "boom": "^5.2.0",
     "compression": "^1.7.0",
     "config": "^1.26.1",
     "errorhandler": "^1.5.0",
@@ -31,7 +32,6 @@
     "nodemon": "^1.11.0",
     "response-time": "^2.3.2",
     "sequelize": "^4.4.2",
-    "sqlite3": "^3.1.9",
     "standard": "^10.0.3"
   },
   "devDependencies": {
