--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --delay 1 ./index.js",
     "lint": "standard --global $",
-    "test": "mocha ."
+    "test": "mocha --recursive routes index.test.js"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,12 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.2",
     "boom": "^5.2.0",
+    "celebrate": "^4.0.1",
     "compression": "^1.7.0",
     "config": "^1.26.1",
     "errorhandler": "^1.5.0",
     "express": "^4.15.4",
+    "joi": "^10.6.0",
     "morgan": "^1.8.2",
     "node-notifier": "^5.1.2",
     "nodemon": "^1.11.0",
